--- a/Proyects/Product_Landing_Page/css/styles.css
+++ b/Proyects/Product_Landing_Page/css/styles.css
@@ -67,6 +67,7 @@
   position: fixed;
   top: 0;
   height: 10vh;
+  min-height: 50px;
   width: 100vw;
   justify-content: space-between;
   align-items: center;
@@ -159,6 +160,7 @@
 /* Header */
 .header {
   height: 90vh;
+  min-height: 450px;
   width: 100vw;
   font-family: "Yaldevi Colombo Bold";
   letter-spacing: 0.4rem;
@@ -350,6 +352,7 @@
   .navDesktop {
     width: 100%;
     height: 10vh;
+    min-height: 65px;
     background: var(--third-bg-color);
     box-shadow: inset 0px -1px 8px rgba(0, 0, 0, 0.25);
     display: flex;
@@ -422,6 +425,7 @@
   /* Header */
   .productName {
     height: 30vh;
+    min-height: 200px;
     position: relative;
     z-index: 9;
     grid-row: 1 / 2;
