--- a/Proyects/Product_Landing_Page/css/styles.css
+++ b/Proyects/Product_Landing_Page/css/styles.css
@@ -49,6 +49,7 @@
   src: local("Yaldevi Colombo SemiBold Regular"),
     url(../fonts/YaldeviColombo-SemiBold.woff) format("woff");
 }
+
 .wrapper {
   width: 100%;
   height: 100%;
@@ -305,7 +306,68 @@
 }
 
 /* Technical description */
+/* Img Slider */
+.imgSlider {
+  left: 0;
+  right: 0;
+  margin: auto;
+  padding-top: 1rem;
+  width: 100vw;
+  height: 100vw;
+}
 
+.slider {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  max-width: 600px;
+  max-height: 600px;
+  box-sizing: border-box;
+  list-style: none;
+  border: var(--bubble-bg-color) solid .5rem;
+  margin: auto;
+  overflow: hidden;
+}
+.slider li {
+  position: absolute;
+  opacity: 0;
+  transition: opacity .6s;
+}
+.slider li img {
+  width: 100%;
+}
+.slider li:first-child {
+  opacity: 1;
+}
+.slider li:target {
+  opacity: 1;
+}
+
+.menu {
+  padding: .1rem;
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  margin: 0;
+  background: var(--bubble-bg-color);
+  width: 100%;
+  margin: auto;
+  max-width: 600px;
+}
+.menu li a img {
+  width: 50px;
+  height: 50px;
+}
+.menu li a {
+  color: var(--bubble-txt-color);
+  text-decoration: none;
+  padding: .1rem;
+}
+
+.menu li a:hover{
+  filter: contrast(1.5);
+  transition: all .5s;
+}
 /* =============MEDIA QUERIES============= */
 
 /* ================================================================= */
@@ -343,6 +405,16 @@
   .descriptionIcons > img {
     width: calc(1rem + 6vw);
   }
+  /* Technical description */
+  /* Slider */
+  .menu li a {
+    padding: .2rem .3rem;
+  }
+  .menu li a img {
+    width: 80px;
+    height: 80px;
+  }
+
 }
 /* ================================================================= */
 /* Notebooks and Desktop*/
