--- a/Proyects/Product_Landing_Page/css/styles.css
+++ b/Proyects/Product_Landing_Page/css/styles.css
@@ -16,6 +16,10 @@
   --bubble-txt-color: #fff;
   --cta-bg-color: #000;
   --cta-txt-color: #ff9000;
+  --bold-yaldevi: 'Yaldevi Colombo Bold';
+  --semibold-yaldevi: 'Yaldevi Colombo SemiBold Regular'; 
+  --regular-yaldevi: 'Yaldevi Colombo Regular';
+  --medium-yaldevi: 'Yaldevi Colombo Medium Regular';
 }
 
 @font-face {
@@ -100,7 +104,7 @@
   padding: 0;
   z-index: 9999;
   overflow: auto;
-  font-family: "Yaldevi Colombo Bold";
+  font-family: var(--bold-yaldevi);
   letter-spacing: 0.2rem;
 }
 
@@ -163,7 +167,7 @@
   height: 90vh;
   min-height: 450px;
   width: 100vw;
-  font-family: "Yaldevi Colombo Bold";
+  font-family: var(--bold-yaldevi);
   letter-spacing: 0.4rem;
   text-align: center;
   display: flex;
@@ -186,7 +190,7 @@
 
 .productDescription {
   font-size: calc(1rem + 2.4vw);
-  font-family: "Yaldevi Colombo Medium Regular";
+  font-family: var(--medium-yaldevi);
   padding: 0 1rem 0.7rem;
 }
 
@@ -205,7 +209,7 @@
 
 .speechBubble {
   background: var(--bubble-bg-color);
-  font-family: "Yaldevi Colombo Bold", sans-serif;
+  font-family: var(--bold-yaldevi), sans-serif;
   font-size: 1.5rem;
   padding: 1.5rem;
   margin: 1.5rem 0 2rem 0;
@@ -227,7 +231,7 @@
 
 .firstDescription > p,
 .secondDescription > p {
-  font-family: "Yaldevi Colombo Regular", sans-serif;
+  font-family: var(--regular-yaldevi), sans-serif;
   padding: 2rem;
   font-size: 1.5rem;
 }
@@ -253,7 +257,6 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  justify-tracks: center;
 }
 .secondDescription-text{
   display: flex;
@@ -287,7 +290,7 @@
   align-content: center;
   justify-content: center;
   background: var(--bubble-bg-color);
-  font-family: "Yaldevi Colombo Bold", sans-serif;
+  font-family: var(--bold-yaldevi), sans-serif;
   font-size: 1.5rem;
   padding: 1.5rem 0 0;
 }
@@ -306,14 +309,24 @@
 }
 
 /* Technical description */
+.technicalDescription {
+  width: 100%;
+  height: 100%;
+  background: var(--second-bg-color);
+  color: var(--second-txt-color);
+}
 /* Img Slider */
 .imgSlider {
   left: 0;
   right: 0;
   margin: auto;
-  padding-top: 1rem;
+  margin-bottom: calc(5rem + 1vw);
+  padding: 1rem 0;
   width: 100vw;
   height: 100vw;
+  max-width: 600px;
+  max-height: 600px;
+  position: relative;
 }
 
 .slider {
@@ -322,11 +335,12 @@
   height: 100%;
   max-width: 600px;
   max-height: 600px;
+  min-width: 300px;
+  min-height: 300px;
   box-sizing: border-box;
-  list-style: none;
   border: var(--bubble-bg-color) solid .5rem;
-  margin: auto;
   overflow: hidden;
+  object-fit: scale-down;
 }
 .slider li {
   position: absolute;
@@ -342,7 +356,10 @@
 .slider li:target {
   opacity: 1;
 }
-
+.sliderMenu {
+  position: relative;
+  width: 100%;
+}
 .menu {
   padding: .1rem;
   list-style: none;
@@ -351,23 +368,52 @@
   margin: 0;
   background: var(--bubble-bg-color);
   width: 100%;
-  margin: auto;
   max-width: 600px;
+  margin: 1rem auto;
+  position: relative;
+}
+.menu li {
+  padding: .3rem;
 }
 .menu li a img {
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
+  background: #fff;
+  border-radius: 10%;
 }
 .menu li a {
   color: var(--bubble-txt-color);
   text-decoration: none;
   padding: .1rem;
+  opacity: .3;
 }
 
 .menu li a:hover{
-  filter: contrast(1.5);
-  transition: all .5s;
+  opacity: 1;
+  transition: all .3s;
 }
+/* Details */
+.h2 {
+  font-family: var(--regular-yaldevi);
+}
+.contentH2 {
+  padding: 1rem;
+  font-size: calc(1rem + 1vw);
+}
+.h2 h2 {
+  background: var(--bubble-bg-color);
+  color: var(--bubble-txt-color);
+  padding: 1rem;
+  font-family: var(--bold-yaldevi);
+  font-size: calc(1.3rem + 1vw);
+  text-align: center;
+}
+.h2 ul {
+  list-style: square;
+  padding: 1rem 2rem;
+  font-size: calc(1rem + 1vw);
+}
+
 /* =============MEDIA QUERIES============= */
 
 /* ================================================================= */
@@ -378,7 +424,6 @@
   .header {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-row: 1fr 1fr;
     justify-items: center;
     align-items: center;
   }
@@ -415,6 +460,10 @@
     height: 80px;
   }
 
+  /* Technical Description */
+   .imgSlider {
+     margin-bottom: 7rem;
+   }
 }
 /* ================================================================= */
 /* Notebooks and Desktop*/
@@ -445,7 +494,7 @@
   .navDesktop .navLinks {
     display: flex;
     list-style: none;
-    font-family: "Yaldevi Colombo Bold", "Times New Roman", Times, serif;
+    font-family: var(--bold-yaldevi), "Times New Roman", Times, serif;
     display: flex;
     align-items: center;
   }
@@ -488,6 +537,43 @@
     min-height: 50vh;
   }
   
+  /* Technical Description */
+  .technicalDescription {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+  .imgSlider {
+    grid-row: 1 / 4;
+    grid-column: span 2;
+    justify-self: center;
+  }
+  .sliderMenu {
+    grid-row: 4 / 5;
+    grid-column: 1 / 3;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 1rem;
+  }
+  .sliderMenu ul {
+    margin: 0;
+  }
+  .h2 {
+    border: var(--bubble-bg-color) solid .5rem;
+  }
+  .h2 h2 {
+    text-align: left;
+    padding-left: 2rem;
+  }
+  #h2Fir{
+    grid-row: 5 / 6;
+    grid-column: 1 / 2;
+  }
+  #h2Sec{
+    grid-row: 5 / 6;
+    grid-column: 2 / 3;
+  }
+
+
 }
 
 /* ================================================================= */
@@ -574,5 +660,41 @@
   }
   .speechBubleTriangle {
     border-width: 0 23px 28px 23px;
+  }
+
+  /* Technical Description */
+  .technicalDescription {
+    padding: 2rem;
+  }
+  .imgSlider {
+    grid-column: 1 / 2;
+    grid-row: span 2;
+    width: 55vw;
+    height: 55vw;
+    max-width: 800px;
+    max-height: 800px;
+    padding: 1.5rem;
+  }
+  .slider {
+    max-width: inherit;
+    max-height: inherit;
+  }
+  .menu {
+    max-width: inherit;
+    max-height: inherit;
+  }
+  #h2Fir {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+  }
+  #h2Fir ul {
+    padding: 1rem  3rem;
+  }
+  #h2Sec .contentH2 {
+    padding: 1rem 1.5rem;
+  }
+  #h2Sec {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
   }
 }
