Copywriting in some sections

--- a/Proyects/Product_Landing_Page/css/styles.css
+++ b/Proyects/Product_Landing_Page/css/styles.css
@@ -481,6 +481,9 @@
 .socialMedia {
   padding: .5rem 0;
 }
+.footer a {
+  text-decoration: none;
+}
 
 /* =============MEDIA QUERIES============= */
 
